# chef-gpt

./: .env.example  .gitignore  ARCHITECTURE_OVERVIEW.md  CLAUDE.md  HANDOFF-INTEGRATION-TESTS.md  HANDOFF.md  IMPLEMENTATION.md  Makefile  PHASE-2-PLAN.md  PROJECT_STATUS.md  README.md  START-HERE.md  STATUS.md  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.json
.github/workflows/: ci.yml
demo/: __init__.py  run_demo.py  scenarios.py
deployment/: anova-server.service  setup_pi.sh
docs/: 01-system-context.md  02-security-architecture.md  03-component-architecture.md  04-custom-gpt-spec.md  05-api-specification.md  06-food-safety-requirements.md  07-deployment-architecture.md  08-adr-index.md  09-integration-test-specification.md  10-error-catalog.md  10-integration-test-automation-strategy.md  11-security-test-specification.md  13-test-traceability-matrix.md  ARCHITECTURE-ANALYSIS-REPORT.md  COMPONENT-IMPLEMENTATIONS.md  E2E_TEST_FIX_AUDIT_REPORT.md  HANDOFF-TDD-IMPLEMENTATION.md  HANDOFF-VALIDATORS-COMPLETE.md  REFACTORING-SUMMARY.md  SCAFFOLDING-AUDIT-REPORT.md  SIMULATOR-IMPLEMENTATION-PLAN.md  SIMULATOR-SPECIFICATION.md  TDD-READINESS-SUMMARY.md  TESTING-ARCHITECTURE-DIAGRAM.md  TESTING-QUICK-REFERENCE.md  TESTING-SUMMARY.md
server/: __init__.py  anova_client.py  app.py  config.py  exceptions.py  middleware.py  routes.py  validators.py
simulator/: __init__.py  auth.py  config.py  control_api.py  errors.py  firebase_mock.py  messages.py  server.py  types.py  websocket_server.py
tests/: __init__.py  conftest.py  test_anova_client.py  test_app.py  test_config.py  test_middleware.py  test_routes.py  test_validators.py
tests/e2e/: __init__.py  conftest.py  test_e2e_cook_lifecycle.py  test_e2e_error_handling.py  test_e2e_validation.py
tests/integration/: test_api_contracts.py  test_core_scenarios.py  test_edge_cases.py  test_error_paths.py  test_fixture_smoke.py  test_happy_path.py  test_int_error_handling.py  test_int_performance.py  test_state_transitions.py
tests/mocks/: __init__.py  anova_fixtures.py  anova_responses.py
tests/simulator/: __init__.py  conftest.py  test_auth.py  test_commands.py  test_control_api.py  test_edge_cases.py  test_errors.py  test_integration.py  test_physics.py  test_websocket.py
