[project]
name = "chef-gpt"
version = "1.0.0"
description = "AI-powered sous vide cooking assistant for Anova Precision Cooker 3.0"
requires-python = ">=3.11"

[tool.ruff]
# Target Python 3.11+
target-version = "py311"
line-length = 100

# Exclude common non-source directories
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    ".pytest_cache",
    "*.egg-info",
]

[tool.ruff.lint]
# Enable recommended rules
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "PL",     # Pylint
    "RUF",    # Ruff-specific rules
]

# Ignore specific rules
ignore = [
    "E501",     # Line too long (handled by formatter)
    "PLR0913",  # Too many arguments (common in test fixtures)
    "PLR2004",  # Magic value comparison (common in tests)
    "PLR0911",  # Too many return statements (complex validation functions)
    "PLR0912",  # Too many branches (complex validation functions)
    "ARG001",   # Unused function argument (common in fixtures)
    "ARG002",   # Unused method argument
    "B008",     # Function call in default argument (used in FastAPI/Flask patterns)
    "PLC0415",  # Import not at top-level (intentional for circular import avoidance)
    "TC001",    # Move import to type-checking block (not critical)
    "PTH",      # Use pathlib (style preference, not critical)
    "SIM105",   # Use contextlib.suppress (explicit try/except more readable for async)
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
# Tests can have unused imports, magic values, unpacked variables, nested with, etc.
"tests/**/*.py" = ["ARG", "PLR2004", "S101", "RUF059", "F841", "B007", "SIM117"]
# __init__ files can have unused imports for re-exports
"__init__.py" = ["F401"]

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"
# Indent with spaces
indent-style = "space"
# Unix-style line endings
line-ending = "lf"

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
include = ["server", "simulator"]
exclude = ["**/__pycache__", ".venv", "venv", "tests"]

# Report settings
reportMissingImports = true
reportMissingTypeStubs = false
reportUnusedImport = true
reportUnusedClass = true
reportUnusedFunction = false  # Flask decorators register functions
reportUnusedVariable = true
reportDuplicateImport = true
reportArgumentType = "warning"  # os.getenv returns str | None
reportReturnType = "warning"  # Flask routes return Response objects
reportOptionalMemberAccess = "warning"  # Runtime checks handle None cases

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
source = ["server", "simulator"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/conftest.py",
]

[tool.coverage.report]
# Fail if coverage is below this percentage
fail_under = 75
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"
